--- a/pom.xml
+++ b/pom.xml
@@ -29,12 +29,23 @@
             <version>1.8.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.18.2</version>
+        </dependency>
 
     <dependency>
         <groupId>org.apache.iceberg</groupId>
         <artifactId>iceberg-spark-extensions-3.5_2.12</artifactId>
         <version>1.8.1</version>
     </dependency>
+        <dependency>
+            <groupId>org.apache.iceberg</groupId>
+            <artifactId>iceberg-spark-runtime-3.5_2.12</artifactId>
+            <version>1.8.1</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
