--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,18 @@
             <artifactId>jackson-core</artifactId>
             <version>2.18.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql-kafka-0-10_2.12</artifactId>
+            <version>3.5.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>3.9.0</version>
+        </dependency>
 
-    <dependency>
+        <dependency>
         <groupId>org.apache.iceberg</groupId>
         <artifactId>iceberg-spark-extensions-3.5_2.12</artifactId>
         <version>1.8.1</version>
